# rat_embed_lang

./: .gitignore  Cargo.toml  README.md  README_en.md  README_ja.md
examples/: basic_usage.rs  duplicate_key_test.rs  parameterized_translation.rs
src/: i18n.rs  language.rs  lib.rs
